Spacing and Star Rotation Fix
Fixed spacing between sections
Changed color of stars
Changed font sizes for headers

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ header {
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 }
 
 header>img {
@@ -87,7 +87,16 @@ section {
   align-self: center;
   font-size: 1.2rem;
   margin-top: 2rem;
-  margin-bottom: 2rem;
+}
+
+h2 {
+  font-size: 3.2rem;
+  margin: 0;
+}
+
+h3 {
+  font-size: 1.8rem;
+  margin: 0;
 }
 
 section.with-images {
@@ -95,7 +104,7 @@ section.with-images {
 }
 
 section>div.content {
-  width: 60%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -107,7 +116,7 @@ section>div.images {
   flex-direction: column;
   justify-content: space-between;
   margin-top: 2rem;
-  width: 30%;
+  width: 20%;
 }
 
 section>div>card>img {
@@ -116,23 +125,22 @@ section>div>card>img {
 }
 
 .img_section {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  margin-top: 0px;
   width: 80%;
-  align-self: center;
+  display: block;
 }
 
 .img_section>p {
-  width: 60%;
+  width: 100%;
+  float: none;
 }
 
 .img_section>div {
   width: 30%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
   margin-top: 2rem;
+  margin-bottom: 2rem;
+  margin-left: 4rem;
+  float: right;
 }
 
 .img_section>div>img {
@@ -154,6 +162,7 @@ section>div>card>img {
   width: 30%;
   max-height: 500px;
   text-align: center;
+  margin-bottom: 2rem;
 }
 
 .galaxy-card>img {
